[gd_scene load_steps=5 format=3 uid="uid://vnykgrf137c2"]

[ext_resource type="Script" uid="uid://dvjvg0c0p6ch" path="res://Scripts/UI/pause_menu.gd" id="1_5vr5q"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sgh04"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.270222, 0.270222, 0.270222, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x1gle"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.270222, 0.270222, 0.270222, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6f7j7"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 320.0
offset_bottom = 160.0
script = ExtResource("1_5vr5q")

[node name="Obscure" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -16.0
offset_top = -16.0
offset_right = 336.0
offset_bottom = 176.0
color = Color(0, 0, 0, 0.384314)

[node name="Panel" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0.290196)
layout_mode = 0
offset_right = 320.0
offset_bottom = 160.0
theme_override_styles/panel = SubResource("StyleBoxFlat_sgh04")

[node name="Resume" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.0
offset_top = -9.0
offset_right = 56.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_x1gle")
metadata/_edit_group_ = true

[node name="OptionsB" type="Label" parent="Panel/Resume"]
layout_mode = 0
offset_right = 112.0
offset_bottom = 20.0
focus_next = NodePath(".")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 12
text = "resume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionsB2" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.0
offset_top = 12.0
offset_right = 56.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_x1gle")
metadata/_edit_group_ = true

[node name="OptionsB" type="Label" parent="Panel/OptionsB2"]
layout_mode = 0
offset_right = 112.0
offset_bottom = 20.0
focus_next = NodePath(".")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 12
text = "options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Autor" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -320.0
offset_top = -144.0
offset_bottom = -116.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 12
text = "pause"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExitB" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.0
offset_top = 36.0
offset_right = 56.0
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_6f7j7")
metadata/_edit_group_ = true

[node name="ExitB" type="Label" parent="Panel/ExitB"]
layout_mode = 0
offset_right = 112.0
offset_bottom = 20.0
focus_next = NodePath(".")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 12
text = "exit"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Panel/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Panel/OptionsB2" to="." method="_on_options_b_2_pressed"]
[connection signal="pressed" from="Panel/ExitB" to="." method="_on_exit_b_pressed"]
